# llmcheck

./: .gitignore  Makefile  README.md  llmcheck.yaml  pyproject.toml
.github/workflows/: llmcheck.yml
apps/agentic-poc/: README.md
apps/agentic-poc/backend/app/: __init__.py  main.py  memory.py  models.py  orchestrator.py  tools.py
apps/agentic-poc/backend/app/llm/: openai_adapter.py
apps/agentic-poc/frontend/: index.html  main.js  styles.css
docs/: agentic-poc-testing.md
examples/cases/: agentic_tool_contract.yaml  grounding_and_tool_contract.yaml  solvable_classification.yaml  solvable_classification_anthropic.yaml  solvable_classification_gemini.yaml
src/llmcheck/: checks.py  cli.py  compare.py  config.py  dashboard.py  models.py  providers.py  reporting.py  runner.py  traces.py  utils.py
tests/: test_compare_and_cli.py  test_grounding.py  test_tool_contract.py
tests/agentic_poc/: __init__.py  test_api.py  test_behavioral_eval.py  test_orchestrator.py
